# gitlab-monitor-rust

./: .gitignore  INSTALLATION-README.txt  README.md  gitlab-config.example
.github/workflows/: tauri.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  gitlab.rs  lib.rs  main.rs  models.rs  state.rs  tray.rs
